[package]
name = "xnvme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xnvme-sys = "0.7.3"
anyhow = "1"
thiserror = "1"
derive_builder = "0.12"
const-str = "0.5.3"
clap = { version = "4", features = [ "derive" ] }